--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "contract"]
-	path = contract
+[submodule "contracts"]
+	path = contracts
 	url = https://github.com/realCanaryWallet/contract.git
