--- a/.github/workflows/deploy-sepolia.yml
+++ b/.github/workflows/deploy-sepolia.yml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+      DEPLOYER_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
       OWNER: ${{ secrets.OWNER }}
       ESCAPE_TO: ${{ secrets.ESCAPE_TO }}
 
