--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -10,6 +10,12 @@ jobs:
     name: 🧪 Compile & Test
     runs-on: ubuntu-latest
 
+    env:
+      SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
+      DEPLOYER_PRIVATE_KEY: ${{ secrets.DEPLOYER_PRIVATE_KEY }}
+      OWNER: ${{ secrets.OWNER }}
+      ESCAPE_TO: ${{ secrets.ESCAPE_TO }}
+
     steps:
       - name: 📥 Checkout repo
         uses: actions/checkout@v3
