--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "npx next dev -p 4000",
     "test": "hardhat test"
   },
   "keywords": [],
@@ -11,10 +12,18 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.24.0"
+    "@types/react": "19.1.4",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.3.2",
+    "hardhat": "^2.24.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0",
-    "dotenv": "^16.5.0"
+    "@tailwindcss/postcss": "^4.1.7",
+    "dotenv": "^16.5.0",
+    "next": "^15.3.2",
+    "react-icons": "^5.5.0"
   }
 }
