--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx next dev -p 4000",
-    "test": "hardhat test"
+    "dev": "npx next dev -p 4000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@types/node": "22.15.19",
     "@types/react": "19.1.4",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.2",
-    "hardhat": "^2.24.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "typescript": "5.8.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.3.0",
     "@tailwindcss/postcss": "^4.1.7",
     "dotenv": "^16.5.0",
     "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
   },
   "type": "module"
